# macrobond-data-api

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  class.drawio  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploying-github-pages.yaml  python-publish.yml  shared.yml
docs/: _lunr_search.inc.mako  config.mako  css.mako  github-corner.mako  html.mako  index.html  index.js  logo.mako  main.mako
docs/macrobond_data_api/: index.html
docs/macrobond_financial/: cli.html  index.html
examples/: 1.1 - Macrobond Data API - Metadata Navigation.ipynb  1.1 - Macrobond web API - Metadata Navigation.ipynb  1.1 - Macrobond web API - Metadata Navigation.md  1.2 - Macrobond Data API - Fetching a Time Series.ipynb  1.2 - Macrobond web API - Fetching a Time Series.ipynb  1.2 - Macrobond web API - Fetching a Time Series.md  1.3 - Macrobond Data API - Fetching multiple Time Series.ipynb  2.1 - Macrobond Data API - Basic Search.ipynb  2.1 - Macrobond web API - Categories Exploration.ipynb  2.2 - Macrobond Data API - Filter on a Concept.ipynb  2.2 - Macrobond web API - Screening on a Concept.ipynb  2.3 - Macrobond Data API - Filter with a Keyword.ipynb  2.3 - Macrobond web API - Screening with a Keyword.ipynb  2.4 - Macrobond Data API - Search with Long Results.ipynb  3.1 - Macrobond Data API - Aligning multiple Time Series.ipynb  3.1 - Macrobond web API - Aligning multiple Time Series.ipynb  4.1 - Macrobond Data API - Revision History.ipynb  4.1 - Macrobond web API - Revision History.ipynb  5.1 - Macrobond Data API - Using the Macrobond Tree Structure.ipynb  Api Examples - Metadata.ipynb  Api Examples - Revision.ipynb  Api Examples - Search.ipynb  Api Examples - Series.ipynb  credentials.py  subscribing_to_updates.py
macrobond_data_api/: __init__.py  __main__.py_  __version__.py  _generated.py  _get_api.py  _macrobond_data_api.py
macrobond_data_api/com/: __init__.py  _com_api_in_house_series.py  _com_api_metadata.py  _com_api_revision.py  _com_api_search.py  _com_api_series.py  _error_message_to_status_code.py  _fill_metadata.py  _fill_metadata_from_entity.py  _fix_datetime.py  _metadata_directory.py  com_api.py  com_client.py
macrobond_data_api/common/: __init__.py  _get_pandas.py  api.py  client.py  utils.py
macrobond_data_api/util/: __init__.py  _common.py  _diagnostic_winreg.py  _transfer_performance_test.py  diagnostic.py  save_credential_to_keyring.py  save_credentials_to_keyring.py  save_proxy_to_keyring.py  transfer_performance_test.py
macrobond_data_api/web/: __init__.py  _access_token_cache.py  _auth_client.py  _metadata.py  _metadata_directory.py  _responseAsFileObject.py  _split_in_to_chunks.py  _subscription_list_poller.py  _thread_pool.py  _web_api_in_house_series.py  _web_api_metadata.py  _web_api_revision.py  _web_api_search.py  _web_api_series.py  _web_only_api.py  auth_error.py  auth_exceptions.py  configuration.py  create_revision_history_request.py  data_package_list_poller.py  scope.py  series_with_vintages.py  session.py  subscription_list.py  subscription_list_poller.py  web_api.py  web_client.py
macrobond_financial/: __init__.py  __version__.py  _version.py  cli.py_
macrobond_financial/com/: _com_api_metadata.py  _com_api_revision.py  _com_api_search.py  _com_api_series.py  _com_meta_directory_methods.py  _com_revision_methods.py  _com_search_methods.py  _com_series_methods.py  _fill_metadata_from_entity.py  com_api.py  com_client.py
macrobond_financial/common/: __init__.py  _get_pandas.py  _return_data_frame.py  api.py  client.py  credentials.py  credentials_locator.py  entity.py  get_entitie_error.py  meta_directory_methods.py  metadata_attribute_information.py  metadata_value_information.py  revision_methods.py  search_methods.py  series.py  series_methods.py  start_or_end_point.py  unified_series.py  vintage_series.py
macrobond_financial/util/: save_credential_to_keyring.py
macrobond_financial/web/: __init__.py  _metadata.py  _metadata_directory.py  _response_stream.py  _web_api_metadata.py  _web_api_revision.py  _web_api_search.py  _web_api_series.py  _web_meta_directory_methods.py  (+10 more)
performance_tests/: parse_date.py  web.py
scripts/: api_code_generator.py  black.py  black_check.py  build.py  build_tool.py  code_generation.py  code_generator.py  context.py  coverage.py  jupyter.py  lint.py  lint_tools.py  mypy.py  pdoc3.py  pdoc3_server.py  pdoc3server.py  pycodestyle.py  pylint.py  pytest_.py  set_up_dev_environment.py  test_setup.py  unittest.py  unittest_310.py  unittest_36.py
tests/: _web_error_handling.py  _web_session.py  conftest.py  jupyter.py  meta_directory_methods.py  mock_adapter.py  mock_adapter_builder.py  revision_methods.py  search_methods.py  series_methods.py  smoke_metadata.py  smoke_revision.py  smoke_search.py  smoke_series.py  templet_conftest  test_common.py  test_macrobond_config.py  test_values.py  web_metadata_methods.py  web_search_methods.py
(+646 files in other folders)
