[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
no_implicit_optional = false
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pandas.*", "ijson.*", "authlib.*", "socks.*"]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "integration",
]
python_files = "*.py"
# python_classes = "*"
# python_functions = "*"
