# pycodestyle

[pycodestyle]
ignore = 
    # E501: line too long (* > 79 characters
    E501,
    # W503: line break before binary operator 
    W503,
    # W291: trailing whitespace
    W291

# pylint

[pylint.FORMAT]
max-line-length = 100

[pylint.'MESSAGES CONTROL']
disable =
# TODO: @mb-jp remove 'missing-class-docstring' 'missing-module-docstring' 'missing-function-docstring'
    missing-class-docstring, 
    missing-module-docstring,
    missing-function-docstring,
    too-many-instance-attributes,
    too-many-arguments,
    too-many-locals,
    too-few-public-methods,
    trailing-whitespace,
    
    duplicate-code,
   
    # pylint and mypy do not agree, so signature-differs is mypy responsibility
    signature-differs,
   
    #nice when declaring abstract methods
    multiple-statements
# build

[metadata]
name = macrobond_financial
version = attr: macrobond_financial.__init__.__version__
author = attr: macrobond_financial.__init__.__author__
author_email = attr: macrobond_financial.__init__.__author_email__
description = attr: macrobond_financial.__init__.__description__
license = attr: macrobond_financial.__init__.__license__
url = attr: macrobond_financial.__init__.__url__
classifiers =
    License :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.7
packages = find:
install_requires =
    keyring
    Authlib
    requests
    python-dateutil
    ijson
    pywin32;platform_system == 'Windows'

[options.packages.find]
include=
    macrobond_financial
    macrobond_financial.*

# [options.entry_points]
# console_scripts =
#     mb-data = macrobond_financial:cli.main

[options.extras_require]
dev = mypy; pylint; pycodestyle; pdoc3; build; coverage; matplotlib; statsmodels; scikit-learn; black[jupyter]; pandas
