# pycodestyle

[pycodestyle]
ignore = 
    # E501: line too long (* > 79 characters
    E501,
    # W503: line break before binary operator 
    W503,
    # W291: trailing whitespace
    W291,
    # E203: whitespace before ':'
    E203,

# pylint

[pylint.FORMAT]
max-line-length = 120
max-branches = 15

[pylint.'MESSAGES CONTROL']
disable =
# TODO: @mb-jp remove 'missing-class-docstring' 'missing-module-docstring' 'missing-function-docstring'
    missing-class-docstring, 
    missing-module-docstring,
    missing-function-docstring,
    too-many-instance-attributes,
    too-many-arguments,
    too-many-locals,
    too-few-public-methods,
    too-many-public-methods,
    trailing-whitespace,
    
    duplicate-code,
    protected-access,
   
    # pylint and mypy do not agree, so signature-differs is mypy responsibility
    signature-differs,
   
    #nice when declaring abstract methods
    multiple-statements,
    invalid-name,

    # black will take care of this for us
    line-too-long,

    # TODO
    W0511,

    # TODO fix all error form this
    W0719,

[metadata]
description_file=README.md
license_files=LICENSE